// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Defaults /> should overwrite default values 1`] = `
Array [
  Array [
    Object {
      "breakpoints": Object {
        "large": 300,
        "medium": 200,
        "small": 100,
        "xlarge": 400,
        "xsmall": 0,
      },
    },
  ],
]
`;

exports[`<Defaults /> should provide default values 1`] = `
Array [
  Array [
    Object {
      "breakpoints": Object {
        "large": 1024,
        "medium": 640,
        "small": 0,
        "xlarge": 1200,
        "xxlarge": 1440,
      },
    },
  ],
]
`;

exports[`<Defaults /> should provide values with defaults 1`] = `
Array [
  Array [
    Object {
      "AnchorComponent": [Function],
      "breakpoints": Object {
        "large": 1024,
        "medium": 640,
        "small": 0,
        "xlarge": 1200,
        "xxlarge": 1440,
      },
    },
  ],
]
`;

exports[`<Defaults /> should still provide default values without Provider 1`] = `
Array [
  Array [
    Object {
      "breakpoints": Object {
        "large": 1024,
        "medium": 640,
        "small": 0,
        "xlarge": 1200,
        "xxlarge": 1440,
      },
    },
  ],
]
`;
